
2023-07-26  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (search_set_keys): improving SEARCH ALL syntax checks

2023-07-25  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_entry_function): if COBOL CALL convention is
	  used, then only use local pointers for specifying not-passed
	  arguments, improving support for omission of trailing (optional)
	  parameters in CALL
	* config.def, codegen.c, typeck.c: added using-optional dialect option;
	  if set to "ok" the check for not-passed arguments will only be done
	  on program entry for all parameters not explicit specified as OPTIONAL
	* parser.y (_procedure_optional): added checks for cb_using_optional,
	  if OPTIONAL used and set to "warning", then reset it to "ok" after first
	  warning
	* codegen.c (output_entry_function): generate checks for
	  EC-PROGRAM-ARG-MISMATCH validating that non-optional arguments are
	  passed and if passed then checks its minimal size

2023-07-24  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (entry_statement): don't check parameter address
	  directly on ENTRY, because it just assigns it
	* codegen.c (output_internal_function, output_entry_function): moved
	  setting of non-passed parameters to NULL to entry function as we only
	  have ordinal CALL numbers available there; set BY VALUE parameters to
	  zero instead of NULL
	* codegen.c (output_field_no_target): extracted to reduce code duplication
	* typeck.c (cb_emit_call): fixed skipping memory-fence generation for
	  EXTERNAL/BASED sub-fields

2023-07-22  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (compute_size): inspect field storage to check for
	  the appropriate field size limit
	* tree.h (cb_field): new flag_above_unbounded
	* tree.c (cb_field_has_unbounded), tree.h: removed; use
	  flag_above_unbounded in callers (typeck.c, cobc.c) instead
	* parser.y (occurs_clause): set flag_above_unbounded in parents

2023-07-21  Simon Sobisch <simonsobisch@gnu.org>
